# Coworking-space-Booking

./: .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sql_script
src/booking/: admin.py  models.py  serializers.py  views.py
src/booking/management/commands/: seed_db.py
src/booking/migrations/: 0001_initial.py  0002_remove_space_type_space_space_description_spaceowner.py  0003_remove_spaceowner_space_space_owner.py  0004_alter_reservation_end_time_and_more.py  0005_delete_user.py
src/booking/tests/: __init__.py  test_api.py  test_models.py
src/config/: middleware.py  settings.py  settings_config.py  urls.py
src/config/logging/: logging_setup.py
