[project]
name = "ceramics-store"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Belaya",email = "polinabeline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.16,<0.16.0)",
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
