[project]
name = "ceramics-store"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Belaya",email = "polinabeline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ruff (>=0.15.16,<0.16.0)",
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
